--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,3 +26,4 @@ URL: https://github.com/felixunterleiter/Lab5
 BugReports: https://github.com/felixunterleiter/Lab5/issues
 VignetteBuilder: knitr
 Config/testthat/edition: 3
+RoxygenNote: 7.3.3
